--- a/R/datasets.ipynb
+++ b/R/datasets.ipynb
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write.table(dataset, file=\"dataset.csv\", row.names=FALSE, col.names=FALSE, quote = FALSE, sep = \",\")"
+    "write.table(dataset, file=\"dataset.csv\", row.names=FALSE, quote = FALSE, sep = \",\")"
    ]
   },
   {
@@ -239,7 +239,7 @@
    "source": [
     "datax <- as.data.frame(ts_data(dataset$x, 5))\n",
     "head(datax)\n",
-    "write.table(datax, file=\"datax.csv\", row.names=FALSE, col.names = FALSE, quote = FALSE, sep = \",\")"
+    "write.table(datax, file=\"datax.csv\", row.names=FALSE, quote = FALSE, sep = \",\")"
    ]
   },
   {
@@ -312,7 +312,7 @@
    "source": [
     "datay <- as.data.frame(ts_data(dataset$y, 5))\n",
     "head(datay)\n",
-    "write.table(datay, file=\"datay.csv\", row.names=FALSE, col.names = FALSE, quote = FALSE, sep = \",\")"
+    "write.table(datay, file=\"datay.csv\", row.names=FALSE, quote = FALSE, sep = \",\")"
    ]
   },
   {
@@ -385,7 +385,7 @@
    "source": [
     "dataxy <- cbind(datax, datay)\n",
     "head(dataxy)\n",
-    "write.table(dataxy, file=\"dataxy.csv\", row.names=FALSE, col.names = FALSE, quote = FALSE, sep = \",\")"
+    "write.table(dataxy, file=\"dataxy.csv\", row.names=FALSE, quote = FALSE, sep = \",\")"
    ]
   },
   {
